Fix loading text going off-screen

--- a/frontend/src/datapage/datapage.css
+++ b/frontend/src/datapage/datapage.css
@@ -25,8 +25,7 @@
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    width: 100%;
-    height: 80vw;
+    margin-top: 25vh;
 }
 
 .data-page-footer {
